tests/failing/missing_columns_test.stderr
error: No relationships or #[column(...)] fields found. You must have at least one of those.
 --> tests/failing/missing_columns_test.rs:4:1
  |
4 | struct MissingColumnsStruct {
  | ^^^^^^
